@@ -59,7 +59,7 @@ CGeneralPrefPage::CGeneralPrefPage()
 #endif
 
 #ifdef USE_DOCKLET
-	m_ShowTrayIcon = gtk_check_button_new_with_mnemonic (_("Show System Tray Icon (Docklet) (Take effect after restart)"));
+	m_ShowTrayIcon = gtk_check_button_new_with_mnemonic (_("Show System Tray Icon (Docklet)"));
 	gtk_widget_show (m_ShowTrayIcon);
 	gtk_box_pack_start (GTK_BOX (m_Widget), m_ShowTrayIcon, FALSE, FALSE, 0);
 #endif
